--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/thesisstatement.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/thesisstatement.tex
@@ -20,7 +20,7 @@ The program will need to handle and solve calculations with weight and volume. T
 
 \item \textbf{Which functions are needed to get the program to compute the most effective way to fit the items into the suitcases?}\newline
 
-Some functions are needed for the program to find the most effective solution. The functions will use an algorithm for optimising and thereby the program will fulfil its purpose.
+Some functions are needed for the program to find the most effective solution. The functions will use an algorithm for optimizing and thereby the program will fulfill its purpose.
 
 \item \textbf{How should the program communicate with the user and inform where the items are placed, and tell how much space is left?}\\
 
