--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/problem/problem.tex
@@ -20,6 +20,7 @@ Because of the weight and size restrictions at the airports it can sometimes be 
 Bringing more luggage means you have to pay more to get the extra luggage with you on the plane. A way you might be able to avoid buying and paying for extra suitcases is to pack the suitcases more than the suitcases are meant to contain. This mean that the suitcases packed more compact. This on the other hand increases the bags weight \citep{altombag}. This should be thought through because too much weight can be unhealthy to carry around.
 
 \subsubsection{Fees regarding luggage by flight}
+\label{sec:overweight}
 The increased weight means the bags might exceed the limit for weight and therefore trigger a fee for overweight luggage.
 It seems people often pack their luggage more compact instead of taking extra bags with them on vacation. Generally people take a lot with them on vacation and they might not have packed their luggage the most effective way \citep{airstat}.
 
