--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -61,6 +61,7 @@
 \input{indhold/design/partneranalysis.tex}
 \input{indhold/design/Solutionsuggestions.tex}
 \input{indhold/design/programplanning.tex}
+\input{indhold/design/sketchdescription.tex}
 \input{indhold/design/GUIdescription.tex}
 \input{indhold/design/ThePackingAlgorithm.tex}
 
