--- a/LaTeX/Rapport - NIX PILLE/indhold/development/FunctionDrawCubes.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/development/FunctionDrawCubes.tex
@@ -34,7 +34,7 @@ For example if the program has a suitcase with the dimensions 50x100x80 (height 
 
 The y-point of the first vector is calculated by adding half of the depth of the suitcase in this case 25 (0+(50/2)). And the z-coordinate of the first vector in the example item would then lie in point 40 (0+(80/2)).
 
-When the points has been loaded into the new Vector, the vector is scaled by a factor of "zoom\_factor". This also happens when zooming in and out, but of course with different values. See \fxfatal{ScaleSizefunctionref} to see how the function "ScaleSize" works. 
+When the points has been loaded into the new Vector, the vector is scaled by a factor of "zoom\_factor". This also happens when zooming in and out, but of course with different values. See section \ref{sec:3DHandler} to see how the function "ScaleSize" works. 
 
 These calculations are shown on Listing \ref{lst:vectorone}
 
