--- a/trunk/LaTeX/Rapport - NIX PILLE/indhold/discussion/Perspectivation.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/indhold/discussion/Perspectivation.tex
@@ -3,7 +3,7 @@ When working with problem solving it is also important to look at how the user w
 
 The purpose in this project was to make a program that provided the user with a packing solution and help the users to pack a suitcase more effectively. The program should also control that the weight of the suitcase does not exceed the limits given by the user. The program is made in "Visual Studio" that provides the developer with a lot of good tools to make an user interface for the user of the program.
 This makes the program a lot more user friendly because the user easier can interact with the program. This means that it will be a lot easier for the user to operate the program and thereby the program have bigger chance to sell if it were the intention.
-The user interface also means that the user do not need understand the program before they can use it.
+The user interface also means that the user do not need to understand the program before they can use it.
 The program in this project also supports mouse control, that means that user can use his/her mouse to navigate around in the program. Because of the mouse support, and the good interface the user has less chance to fail in using the program, but by implementing an interface there is a risk for new bugs and misunderstandings in the formulations in the interface.
 Therefore it is important to make a clean and user friendly interface that only contains the necessary buttons and well formulated text that helps the user by informing about what they should do, and which unit the data is in.
 
