--- a/trunk/LaTeX/Undervejs/Mettes arbejde.tex
+++ b/trunk/LaTeX/Undervejs/Mettes arbejde.tex
@@ -1,63 +1,10 @@
 \chapter{Conclusion}
 In this the final chapter a conclusion will be made about how well the final program works and which requirements it meets.
 
+The program has been written in the programming language C\# and a user interface have been made to make it easier for the user to use the program. When opening the program the main window of the program will appear. Here the instructions on how to use the program will be so the user always will have them at hand. From the main window the user can either get informations about the creators of the program, load a previous saved list, manage the lists or start the packing. The program saves the lists on the computer at a place the user specifies. This means the program can be used at any time even without an internet connection. 
 
+In the manage windows the user can see the list of added suitcases or items and be able to edit the list. The user will be able to add new items or suitcases to the list, delete items or suitcases or edit already made items or suitcases. The user will have to provide the program with the items dimensions and weight and when adding suitcases also the weight limit for the suitcase. From the manage windows the user can save the lists on the computer for later use. 
 
-In this section a thesis statement will be formulated which will be used to develop a
-method to the problem of this project and to get a more precise problem to work with.
-The method is used to try and solve the problem stated in the thesis statement.
-The problem analyses shows that there are two general types of programs on the market.
-One type is a form of a packing list that tells the user what they might want to pack,
-Page 12 of 59
-Group B130, Aalborg University P2 2. Problem Analysis
-the other type of program is a packing program which packs containers for the user and
-calculates the shipping cost to a designated location. These two types of programs only
-fulfill parts of the criteria this project have put forward. With this in mind a thesis
-statement have been formulated to help shape the solution for this projects problem.
-• How can a program be developed which helps the customer through the progress of
-packing one or more suitcases the most effective way by size and weight?
-The meaning of this thesis statement is to research and develop a program that in
-some way could handle the problem, but the consumer also plays a role in the problem.
-Therefore the consumer must also be taken into account when it is being developed. The
-reason for this is to make the program as user friendly as possible.
+After done managing the lists the user are returned to the main window where a button will start the algorithm managing the packing. When the algorithm is done a window will appear showing a 3D-image of the suitcase with all the things to be packed inside. A list of the items will be on the right side and then an item is selected it will be highlighted in the 3D-image. The image can be dragged, rotated and zoomed so the user have the best possibilities to view the 3D-image as he/she wants.
 
-4.1.1 Targeted Features
-These are the essential features that the program will have.
-Program language is C#: The program need to written in C# since the requirements
-for this project is that the program is written in C#.
-Guide the user: The program will have a small "read me" file, or another form of
-guide, which will tell the user how to use the program.
-Distribute weight: The program must be able to distribute weight of items between
-multiple suitcases if there are more than one suitcase.
-Distribute space: The program also needs to distribute the items by space. The
-whole idea of the program, is that it should be able to tell the user how to pack the suitcase,
-and be able to tell if there is enough space for eventual souvenirs. Lastly it should
-Fatal: Men den inform the user how much space, if any, is left.
-fortæller jo ikke hvor
-meget plads der er
-tilbage og om der kan
-være souvenirs!
-On the road: The program will be able to tell you, while you are on the trip, if there
-is enough space for a souvenirs, if you input the dimensions and weight of that item. And
-if you want to remove an item from your luggage it can this as well.
-Baggage rules: The program will need to know basic baggage rules. For example
-Fatal: Der er da the luggage must not weigh too much, and it must be below certain dimensions.
-med basis regler i
-programmet eller noget
-om dimensioner! Structure of packing: When the user asks the program if an item will fit in the
-suitcase, the program will show exactly where in the suitcase the item will fit.
-Packing list: To make it easier for the user to know what will be packed an editable
-lists will be included.
-Save/Load function: To make the program easy to use on a trip, there is need for
-a function that can keep the data safe when the user closes the program.
-4.1.2 Optional Features
-These features as mentioned above, are additional features that might be able to be implemented
-later if possible.
-Solid/liquid/bendable shapes: The program will also take in account that items
-Page 20 of 59
-Group B130, Aalborg University P2 4. Design
-might be bendable, and therefore fit in other ways than solid items. For instance a T-shirt
-can be folded in many ways and thus can be considered a liquid form as it can fit almost
-everywhere.
-Type of trip Depending on the nature of the trip different packing lists will be necessary
-because each trip might require different items.
+So the program covers the targeted requirements for the product and therefore the program should solve the problem stated in the thesis statement. It can be concluded that the program can pack one or more suitcases using weight distributing. It might be improved by a function that handles bendable shapes, but even throw the program is missing that feature it is able to pack one or more suitcases in a good efficient way. Therefore it is a good program that helps the user with the process of packing one or more suitcases while using weight distributing but it could be improved if more time was available. 
