--- a/trunk/LaTeX/Undervejs/Mettes arbejde.tex
+++ b/trunk/LaTeX/Undervejs/Mettes arbejde.tex
@@ -7,4 +7,4 @@ In the manage windows the user can see the list of added suitcases or items and 
 
 After done managing the lists the user are returned to the main window where a button will start the algorithm managing the packing. When the algorithm is done a window will appear showing a 3D-image of the suitcase with all the things to be packed inside. A list of the items will be on the right side and then an item is selected it will be highlighted in the 3D-image. The image can be dragged, rotated and zoomed so the user have the best possibilities to view the 3D-image as he/she wants.
 
-So the program covers the targeted requirements for the product and therefore the program should solve the problem stated in the problem statement. It can be concluded that the program can pack one or more suitcases using weight distributing. It might be improved by a function that handles bendable shapes, but even throw the program is missing that feature it is able to pack one or more suitcases in a good efficient way. Therefore it is a good program that helps the user with the process of packing one or more suitcases while using weight distributing but it could be improved if more time was available. 
+So the program covers the targeted requirements for the product and therefore the program should solve the problem stated in the problem statement. The program also solves the problem stated in the project suggestion, about making a program able to help the planning in packing a suitcase (see appendix \fxfatal{Missing section reference}.It can be concluded that the program can pack one or more suitcases using weight distributing. It might be improved by a function that handles bendable shapes, but even throw the program is missing that feature it is able to pack one or more suitcases in a good efficient way. Therefore it is a good program that helps the user with the process of packing one or more suitcases while using weight distributing but it could be improved if more time was available. 
