--- a/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/trunk/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -84,12 +84,13 @@
 
 \chapter{Discussion}
 \label{chap:Discussion}
+\input{indhold/discussion/DiscussionIntro.tex}
 \input{indhold/discussion/Discussion.tex}
 \input{indhold/discussion/Perspectivation.tex}
 
 \chapter{Conclusion}
 \label{chap:conclusion}
-fxfatal{mangler conc}
+\fxfatal{mangler conc}
 
 %%%% Kilder %%%%
 
@@ -100,8 +101,8 @@ fxfatal{mangler conc}
 
 %%%% Fixme-listen %%%%
 
-\newpage
-\listoffixmes	% Fixme-listen - fjernes til sidst i projektet med "%"
+%\newpage
+%\listoffixmes	% Fixme-listen - fjernes til sidst i projektet med "%"
 
 \clearforchapter
 
