--- a/LaTeX/Process Analysis/Mangler at blive skrevet/Project planning/TimeSchedule-chr.tex
+++ b/LaTeX/Process Analysis/Mangler at blive skrevet/Project planning/TimeSchedule-chr.tex
@@ -1,2 +1,2 @@
 \section{Time Schedule}
-We did, from our good experience in last project
+We did, from our good experience in last project, choose to make a time schedule 
